--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,10 @@
-source 'https://github.com/CocoaPods/Specs.git'
-platform :ios, '14.0'
+source 'https://cdn.cocoapods.org/'
 
-# CocoaPods analytics sends network stats synchronously affecting flutter build latency.
+platform :ios, '16.0'
+ENV['FLUTTER_ROOT'] = '/usr/local/flutter'
+load File.join(__dir__, 'Flutter', 'podhelper.rb')
+
+
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', {
@@ -10,20 +13,9 @@ project 'Runner', {
   'Release' => :release,
 }
 
-def flutter_root
-  generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
-  unless File.exist?(generated_xcode_build_settings_path)
-    raise "#{generated_xcode_build_settings_path} must exist. If you're running pod install manually, make sure flutter pub get is executed first"
-  end
+load File.join(__dir__, 'Flutter', 'podhelper.rb')
 
-  File.foreach(generated_xcode_build_settings_path) do |line|
-    matches = line.match(/FLUTTER_ROOT\=(.*)/)
-    return matches[1].strip if matches
-  end
-  raise "FLUTTER_ROOT not found in #{generated_xcode_build_settings_path}. Try deleting Generated.xcconfig, then run flutter pub get"
-end
 
-require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
 
 flutter_ios_podfile_setup
 
@@ -31,33 +23,21 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
-  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  flutter_install_all_ios_pods
+
+  # --- Compatibility fixes ---
+  pod 'AppAuth', '>= 1.7.4'
+  pod 'GoogleSignIn', '~> 8.0'
 end
 
-# --- Use versions compatible with google_sign_in_ios (8.x) ---
-pod 'AppAuth', '>= 1.7.4'
-pod 'GoogleSignIn', '~> 8.0'
-pod 'GoogleUtilities', '~> 8.0'
-# -------------------------------------------------------------
-
-
-
-# 👇 ADD THIS BLOCK TO FORCE OLDER FIREBASE SDK (compatible with older Xcode)
-$FirebaseSDKVersion = '10.15.0'
-
 post_install do |installer|
-  installer.generated_projects.each do |project|
-    project.targets.each do |target|
-      target.build_configurations.each do |config|
-        # Set minimum iOS deployment version
-        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
-        # Force Swift 5.0 for compatibility with old Xcode
-        config.build_settings['SWIFT_VERSION'] = '5.0'
-      end
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
+      config.build_settings['SWIFT_VERSION'] = '5.0'
     end
   end
 
-  # Fix Firebase/Swift incompatibility for older toolchains
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
   end
