--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Icine</string>
+	<string>Play Lab</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>PlayLab</string>
+	<string>play_lab</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -41,37 +41,6 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-
-	<key>FirebaseAppDelegateProxyEnabled</key>
-    <false/>
-
-    <key>GADApplicationIdentifier</key>
-    <string>ca-app-pub-3940256099942544~1458002511</string>
-
-
-    <key>CFBundleURLTypes</key>
-    <array>
-      <dict>
-      <key>CFBundleTypeRole</key>
-      <string>Editor</string>
-      <key>CFBundleURLSchemes</key>
-        <array>
-          <string>fb3497474477156540</string>
-          <!-- Copied from GoogleService-Info.plist key REVERSED_CLIENT_ID -->
-          <string>com.googleusercontent.apps.478780527317-81sac2ls2klt3n6nnuffjfve26lgic6h</string>
-        </array>
-      </dict>
-    </array>
-    <key>FacebookAppID</key>
-    <string>3497474477156540</string>
-    <key>FacebookClientToken</key>
-    <string>93a3d3c7cdcc71e5f4647b669bb59038</string>
-    <key>FacebookDisplayName</key>
-    <string>PlayLab</string>
-
-
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
