--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,32 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	    <!-- ✅ Allow network/API connections -->
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
+
+    <!-- ✅ Required if your app shows webviews, video, or fetches from HTTP links -->
+    <key>NSAllowsArbitraryLoadsInWebContent</key>
+    <true/>
+
+    <!-- ✅ Permission prompts for user media or downloads -->
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Allow Icine to access your photo library to upload or save content.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Allow Icine to use the camera for profile or video uploads.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Allow Icine to access the microphone for recording.</string>
+
+    <!-- ✅ Fixes local network discovery for Flutter hot reload / debug -->
+    <key>NSLocalNetworkUsageDescription</key>
+    <string>This app uses the local network to communicate with your computer during development.</string>
+
+    <!-- ✅ Google Mobile Ads App ID (REQUIRED to prevent crash) -->
+    <key>GADApplicationIdentifier</key>
+    <string>ca-app-pub-3940256099942544~1458002511</string>
+
 </dict>
 </plist>
