--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   firebase_auth: ^5.0.0
   firebase_messaging: ^15.0.0
   firebase_analytics: ^11.0.0
-  firebase_crashlytics: ^4.0.0
+  # firebase_crashlytics: ^4.0.0  # Temporarily disabled due to build script error
   firebase_remote_config: ^5.0.0
   flutter_local_notifications: ^17.2.1
   google_mobile_ads: 5.2.0
